add Sign In method
