# build/classes/java/main/META-INF/swagger/micronaut-guides-1.0.yml
@@ -3,6 +3,29 @@ info:
   title: micronaut-guides
   version: "1.0"
 paths:
+  /Users/Sign-in:
+    get:
+      tags:
+      - Users
+      operationId: singIn
+      parameters:
+      - name: email
+        in: query
+        required: true
+        schema:
+          type: string
+      - name: password
+        in: query
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: singIn 200 response
+          content:
+            application/json:
+              schema:
+                type: boolean
   /Users/save:
     post:
       tags:
@@ -21,6 +44,24 @@ paths:
             application/json:
               schema:
                 type: string
+  /Users/{email}:
+    get:
+      tags:
+      - Users
+      operationId: getUserByEmail
+      parameters:
+      - name: email
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: getUserByEmail 200 response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
   /healthCheck/get:
     get:
       tags:
