# src/main/java/com/arquitecture/controller/UserContoller.java
@@ -4,10 +4,7 @@ import com.arquitecture.entity.User;
 import com.arquitecture.service.UserServices;
 import io.micronaut.http.HttpResponse;
 import io.micronaut.http.MutableHttpResponse;
-import io.micronaut.http.annotation.Body;
-import io.micronaut.http.annotation.Controller;
-import io.micronaut.http.annotation.Post;
-import io.micronaut.http.annotation.Produces;
+import io.micronaut.http.annotation.*;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.inject.Inject;
 
@@ -20,8 +17,20 @@ public class UserContoller {
     @Post(uri = "/save")
     @Produces("application/json")
     public MutableHttpResponse<String> saveUser(@Body User user) {
-        return HttpResponse.created(userServices.saveUserWithRoles(user));
+        return HttpResponse.created(userServices.saveUser(user));
     }
+
+    @Get(uri = "/{email}")
+    @Produces("application/json")
+    public MutableHttpResponse<User> getUserByEmail(@PathVariable String email) {
+        return HttpResponse.ok(userServices.getUserById(email));
+    }
+
+   @Get(uri = "/Sign-in")
+   @Produces("application/json")
+    public MutableHttpResponse<Boolean> singIn(String email,String password){
+        return HttpResponse.ok(userServices.singIn(email,password));
+   }
 
 
 }
